--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/s1g1r/securestorage.git"
+    "url": "https://github.com/saagar7200/securefile.git"
   },
   "author": "",
   "license": "ISC",
